# RegRank

./: .gitignore  .pre-commit-config.yaml  PI_c18basic.gt  README.md  README.rst  debug_line_search.ipynb  environment.yml  graph_for_debugging.gt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/workflows/: release.yml
config/: config.yaml
config/regularizer/: branch_constrained.yaml
data/: README.md
doc/: conf.py
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
docs/: conf.py  extlinks_fancy.py  index.rst
docs/_templates/autosummary/autosummary/: base.rst
docs/autoapi/: index.rst
docs/autoapi/regrank/: index.rst
docs/autoapi/regrank/core/: index.rst
docs/autoapi/regrank/core/base/: index.rst
docs/autoapi/regrank/core/losses/: index.rst
docs/autoapi/regrank/main/: index.rst
docs/autoapi/regrank/regularizers/: index.rst
docs/autoapi/regrank/regularizers/annotated/: index.rst
docs/autoapi/regrank/regularizers/branch_constrained/: index.rst
docs/autoapi/regrank/regularizers/dictionary/: index.rst
docs/autoapi/regrank/regularizers/huber/: index.rst
docs/autoapi/regrank/regularizers/l1time/: index.rst
docs/autoapi/regrank/regularizers/l2time/: index.rst
docs/autoapi/regrank/regularizers/legacy/: index.rst
docs/autoapi/regrank/regularizers/regularizers/: index.rst
docs/autoapi/regrank/solvers/: index.rst
docs/autoapi/regrank/solvers/cvx/: index.rst
docs/autoapi/regrank/solvers/firstOrderMethods/: index.rst
docs/autoapi/regrank/utils/: index.rst
docs/autoapi/regrank/utils/NamedGraph/: index.rst
docs/autoapi/regrank/utils/clustering/: index.rst
docs/autoapi/regrank/utils/colors/: index.rst
docs/autoapi/regrank/utils/datasets/: index.rst
docs/autoapi/regrank/utils/graph2mat/: index.rst
docs/autoapi/regrank/utils/plotting/: index.rst
docs/autoapi/regrank/utils/poset/: index.rst
docs/autoapi/regrank/utils/reporting/: index.rst
docs/autoapi/regrank/utils/stats/: index.rst
docs/autoapi/regrank/utils/stats/cross_validation/: index.rst
docs/autoapi/regrank/utils/stats/experiments/: index.rst
docs/autoapi/regrank/utils/stats/utils/: index.rst
docs/autoapi/regrank/utils/utils/: index.rst
docs/src/: datasets.rst  draw.rst  io.rst  optimize.rst  stats.rst
docs/src/autosummary/: rSpringRank.stats.CrossValidation.rst  rSpringRank.stats.PeerInstitution.rst  rSpringRank.stats.PhDExchange.rst  regrank.stats.CrossValidation.rst  regrank.stats.PeerInstitution.rst  regrank.stats.PhDExchange.rst
docs/usage/: baby-steps.md  usage-and-options.md
examples/: 03_datasets.ipynb
notebooks/: 03_datasets.py  03_datasets_porder.py  04_cross_validation.py  05_new_method.py  README.md  justtotest.py
rSpringRank/: __init__.py  cross_validation.py  cvx.py  experiments.py  firstOrderMethods.py  fit.py  losses.py  models.py  utils.py
rSpringRank/datasets/: __init__.py  _fetchers.py  _registry.py
rSpringRank/datasets/tests/: test_phd_exchange.py  test_vanilla_springrank.py
rSpringRank/draw/: __init__.py  utils.py
rSpringRank/io/: __init__.py  graph2mat.py  utils.py
rSpringRank/optimize/: __init__.py  cvx.py  firstOrderMethods.py  fit.py  losses.py  models.py  regularizers.py
rSpringRank/stats/: __init__.py  benchmark.py  cross_validation.py  experiments.py
reg_spr/: benchmark.py  cvx.py  experiments.py  fit.py  losses.py  models.py  regularizers.py  utils.py
reg_sr/: __init__.py  benchmark.py  cross_validation.py  cvx.py  experiments.py  fit.py  losses.py  models.py  regularizers.py  utils.py
regrank/: __init__.py
regrank/datasets/tests/: test_phd_exchange.py
regrank/draw/: __init__.py
regrank/optimize/: firstOrderMethods.py  models.py
regrank/stats/: cross_validation.py  experiments.py
services/: docker-compose.yml
src/regrank/: __init__.py  main.py
src/regrank/core/: __init__.py  base.py  losses.py
src/regrank/datasets/: _fetchers.py
src/regrank/datasets/tests/: test_vanilla_springrank.py
src/regrank/draw/: __init__.py
src/regrank/io/: graph2mat.py
src/regrank/models/: SparseLowRankMatrixRegression.py  __init__.py  losses.py  models.py  pg.py  regularizers.py  utils.py
src/regrank/optimize/: cvx.py
src/regrank/regularizers/: __init__.py  annotated.py  branch.py  branch_constrained.py  huber.py  l1time.py  l2time.py  legacy.py  regularizers.py
src/regrank/solvers/: __init__.py  cvx.py  firstOrderMethods.py
src/regrank/stats/: cross_validation.py  experiments.py
src/regrank/utils/: __init__.py  clustering.py  colors.py  graph2mat.py  named_graph.py  named_poset.py  plotting.py  poset.py  reporting.py  utils.py
src/regrank/utils/datasets/: __init__.py  _fetchers.py
src/regrank/utils/stats/: experiments.py  utils.py
tests/: conftest.py  test_phd_exchange.py  test_vanilla_springrank.py
tests/datasets/: test_legacy_springrank.py  test_phd_exchange.py
tests/integration/: test_main_springrank.py
tests/unit/core/: test_legacy.py  test_legacy_regularizer_bicgstab.py  test_legacy_regularizer_cvxpy.py  test_legacy_regularizer_lsmr.py
tests/unit/utils/: test_colors.py  test_named_poset.py  test_poset.py
tests/unit/utils/datasets/: test_legacy_springrank.py  test_phd_exchange.py
tests/utils/: test_poset.py
