
[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "regrank"
version = "0.2.30"
description = "Regularized methods for efficient ranking in networks"
authors = ["Tzu-Chi Yen <tzuchi.yen@colorado.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/junipertcy/regrank"
repository = "https://github.com/junipertcy/regrank"
documentation = 'https://docs.netscied.tw/regrank/index.html'
keywords = [
    "network-analysis",
    "convex-optimization",
    "ranking-algorithm",
    "proximal-gradient-method",
    "denoising",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPL-3.0-or-later)", # Explicit full name
    "Natural Language :: English",
    "Operating System :: OS Independent", # More robust than listing each OS
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# --- Core Dependencies ---
[tool.poetry.dependencies]
python = ">=3.11,<3.13" # Loosened lower bound
cvxpy = "^1.5.2"
scipy = "^1.10.0"
numpy = "^1.26.4"
numba = "^0.60.0"
scikit-learn = "^1.5.0"
distinctipy = "^1.3.4"
prettytable = "^3.0.0"
pooch = "^1.8.2"
matplotlib = "^3.5.0"
zstandard = "^0.22.0"

# --- Development and Tooling Dependencies ---
[tool.poetry.group.dev.dependencies]
# Linting & Formatting
black = "^24.10.0"
ruff = "^0.8.1"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

# Testing
pytest = "^8.2.2"
pytest-docker = "^3.2.3"

# Documentation
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"
numpydoc = "^1.7.0"
sphinx-markdown-tables = "^0.0.17"
mathjax = "^0.1.2"
intersphinx-registry = "^0.2406.4"
types-docutils = "^0.21.0"

# Interactive Development & Profiling
marimo = "^0.6.24"
scalene = "^1.5.42"
poetry-plugin-export = "^1.8.0"

# --- Tool Configurations ---

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
# No need for exclude, black's defaults are excellent.

[tool.ruff]
# Same as Black
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # Handled by Black's line length
    "C901", # Allow complex functions (common in scientific code)
    "B008", # Do not complain about function calls as default arguments
]
exclude = ["docs/extlinks_fancy.py"]

[tool.ruff.lint.isort]
known-first-party = ["regrank", "tests"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra"
filterwarnings = [
    "error", # Treat all warnings as errors by default
    # Explicitly ignore the ones you are handling
    "ignore:The 'SpringRankLegacy' class is deprecated:DeprecationWarning",
]
norecursedirs = ["docs", "build", ".venv"]
junit_family = "xunit2"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"] # Add common platforms

[tool.pixi.pypi-dependencies]
regrank = { path = ".", editable = true }
